# recast-chicago-event-june-2026

./: .gitattributes  .gitignore  .hermes.md  .markdownlint.jsonc  .pre-commit-config.yaml  .remarkignore  .remarkrc.mjs  .tflint.hcl  .yamllint.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_CHAT_PROMPTS.md  GEMINI.md  GETTING_STARTED_EXISTING_REPO.md  GETTING_STARTED_NEW_REPO.md  LICENSE  OPTIONAL_CONFIGURATIONS.md  README.md  SECURITY.md  TEMPLATE_MAINTENANCE.md  TEMPLATE_UPDATE_PROCEDURE.md  package-lock.json  package.json  pyproject.toml
.azuredevops/: pull_request_template.md
.azuredevops/pipelines/: README.md  check-placeholders.yml  data-ci.yml  markdownlint.yml  powershell-ci.yml  precommit.yml  python-ci.yml  terraform-ci.yml
.azuredevops/platform/: adoption-guidance.md
.claude/: settings.json
.claude/hooks/: session-start.sh
.codex/: config.toml
.cursor/rules/: repository-instructions.mdc
.github/: CODEOWNERS  TEMPLATE_DESIGN_DECISIONS.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml
.github/instructions/: docs.instructions.md  gitattributes.instructions.md  json.instructions.md  python.instructions.md  terraform.instructions.md  yaml.instructions.md
.github/linting/: PSScriptAnalyzerSettings.psd1
.github/scripts/: check-prohibited-placeholders.py  check-toolchain-eol.js  lint-nested-markdown.js  replace-template-placeholders.py  terraform_hooks.py
.github/workflows/: auto-fix-precommit.yml  check-placeholders.yml  data-ci.yml  markdownlint.yml  powershell-ci.yml  precommit-ci.yml  python-ci.yml  terraform-ci.yml  toolchain-eol.yml
.template-sync/: instruction-contracts.yml  manifest.yml  marker.yml
.template-sync/scripts/: first_adoption_quality_reports.py  first_adoption_state.py  generate_sync_candidates.py  initialize_adoption_journal.py  materialize_downstream_adoption.py  report_excluded_module_references.py  run_first_adoption_checks.py  template_sync_materialization_helpers.py  validate_downstream_adoption.py  validate_instruction_contracts.py  validate_marker.py
docs/: PR_REVIEW_PROMPTS.md  azure-devops-support.md
docs/adoption-support/: prompt-capture-upstream-difficulties.md  prompt-new-repo-adoption-first-run.md
docs/demos/demo-1/: prompt-adoption-into-existing-repo-with-q-and-a.md
docs/demos/demo-2/: prompt-define-work-items.md  prompt-work-on-first-work-item.md
docs/dev/: Get-AllWin11ComplianceStatus-backlog-prioritization-rubric.md  Get-AllWin11ComplianceStatus-lower-priority-improvement-backlog.md  Get-AllWin11ComplianceStatus-sequenced-priority-findings-preliminary.md  Get-AllWin11ComplianceStatus-sequenced-priority-findings-research.md  Get-AllWin11ComplianceStatus-sequenced-priority-work-items.md  github-issue-style-guide.md
docs/terraform/: TERRAFORM_COPILOT_INSTRUCTIONS_GUIDE.md  TERRAFORM_LINTING_GUIDE.md  TERRAFORM_TESTING_GUIDE.md
schemas/: README.md  example-config.schema.json  first-adoption-quality-suppressions.schema.json  template-sync-instruction-contracts.schema.json  template-sync-manifest.schema.json  template-sync-marker.schema.json
schemas/examples/example-config/invalid/: extra-property.json  wrong-type.json
schemas/examples/example-config/valid/: full.json  minimal.json
schemas/examples/first-adoption-quality-suppressions/invalid/: missing-path-reference-section.json  missing-suppression-reason.json  missing-suppression-selector.json  unknown-path-reference-rule.json
schemas/examples/first-adoption-quality-suppressions/valid/: full.json  minimal.json
schemas/examples/template-sync-instruction-contracts/invalid/: missing-anchor-list.yml  path-traversal.yml
schemas/examples/template-sync-instruction-contracts/valid/: multi-agent.yml
schemas/examples/template-sync-marker/invalid/: azure-devops-credential-url.yml  azure-fields-without-azure-host.yml  azure-org-url-extra-path.yml  azure-project-url-missing-project.yml  azure-repository-url-missing-git.yml  azure-url-non-azure-host.yml  branch-last-reviewed-sha.yml  deferred-candidate-directory-path.yml  duplicate-module.yml  empty-instruction-waiver-reason.yml  invalid-protected-adoption-mode.yml  local-ownership-extra-property.yml  local-ownership-glob-path.yml  malformed-protected-decision.yml  missing-collaboration-policy-follow-up.yml  missing-instruction-waiver-authorization.yml  missing-protected-decision-path.yml  missing-protected-edit-authorization.yml  unknown-module.yml  (+11 more)
scripts/: Get-AllWin11ComplianceStatus.ps1
src/copilot_repo_template/: __init__.py  example.py
src/tools/: Resolve-PSScriptAnalyzerGate.ps1
templates/adoption/: _TEMPLATE-ADOPTION-DIFFICULTIES.md
templates/json/: README.md  starter.schema.json
templates/markdown/: .markdownlint-cli2.jsonc
templates/powershell/: Example.Tests.ps1
templates/python/: README.md  pyproject.toml
templates/python/tests/: __init__.py  test_placeholder.py  test_schema_examples.py
templates/terraform/: Example.tftest.hcl
templates/yaml/: README.md  starter-config.yaml  yamllint.lenient.yml  yamllint.strict.yml
tests/: __init__.py  test_check_prohibited_placeholders.py  test_dependabot_schema.py  test_example.py  test_first_adoption_quality_reports.py  test_first_adoption_state.py  test_generate_sync_candidates.py  test_gitattributes.py  test_initialize_adoption_journal.py  test_materialize_downstream_adoption.py  test_replace_template_placeholders.py  test_report_excluded_module_references.py  test_run_first_adoption_checks.py  test_schema_examples.py  test_template_manifest.py  test_template_sync_materialization_helpers.py  test_terraform_hooks.py  test_validate_downstream_adoption.py  test_validate_instruction_contracts.py  test_validate_marker.py
tests/PowerShell/: Get-AllWin11ComplianceStatus.Tests.ps1  Placeholder.Tests.ps1  Resolve-PSScriptAnalyzerGate.Tests.ps1
tests/fixtures/dependabot/: auto-assignment.yml
tests/toolchain-eol/: check-toolchain-eol.test.js
tests/toolchain-eol/fixtures/: node-schedule.json
(+15 files in other folders)
