# pyproject.toml for the copilot-repo-template repository
#
# This file provides a minimal Python project configuration that allows the CI
# workflows (.github/workflows/python-ci.yml) to run successfully.
#
# This is a TEMPLATE REPOSITORY. When you create a new repository from this
# template, you should customize this file for your project. See
# templates/python/pyproject.toml for a more comprehensive example with
# additional tooling configuration (Black, Ruff, etc.).

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-repo-template"
version = "0.1.0"
description = "Template repository providing GitHub Copilot instructions and CI configurations"
readme = "README.md"
# Python Version Policy:
# Support Python release lines that are currently receiving bugfixes.
# Check https://devguide.python.org/versions/ for current version status.
# Keep this range, classifiers, Black targets, mypy's lowest-supported version,
# and the CI matrix aligned when upstream support changes.
requires-python = ">=3.13,<3.15"
license = "MIT"
authors = [
    { name = "Frank Lesniak" }
]
keywords = ["template", "copilot", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

# Runtime dependencies
dependencies = []

# Development dependencies
# These are the minimum required for CI workflows to pass.
# The template in templates/python/pyproject.toml includes additional
# tools like Black and Ruff for comprehensive development setups.
[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "mypy>=1.20.0",
    "ruff>=0.15.10",
    "jsonschema>=4.18.0",
    "types-jsonschema>=4.26.0.20260518",
    "PyYAML>=6.0.3",
    # check-jsonschema validates schema examples (tests/test_schema_examples.py)
    # and the documented Dependabot fixture (tests/test_dependabot_schema.py).
    # It is pinned to the exact version of the check-jsonschema pre-commit hook
    # in .pre-commit-config.yaml so the regression tests exercise the same
    # bundled vendor schemas as the default hooks. test_dependabot_schema.py
    # fails if this pin and the pre-commit `rev` drift, so bump them together.
    "check-jsonschema==0.37.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
# Keep this explicit and aligned with the active Python support window
# to avoid formatter/runtime mismatches and stale syntax allowances.
target-version = ["py313", "py314"]

[tool.mypy]
# Check against the lowest supported Python line so type checks stay compatible
# across the support window. mypy uses a dotted version string.
python_version = "3.13"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src,$MYPY_CONFIG_FILE_DIR/.template-sync/scripts"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
# Start permissive for template; projects can tighten as they mature
disallow_untyped_defs = false

[tool.pytest.ini_options]
strict_markers = true
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "upstream_template_only: tests that rely on the upstream template repository's complete optional module set, protected governance files, unreplaced placeholders, or maintainer-only context",
    "downstream_template_support: tests useful for downstream template-support validation; the official downstream gate uses negative upstream_template_only selection instead",
    "slow: tests that run slower integration scenarios and may be isolated during local iteration",
]
