# Local Python tooling metadata for template-sync support.
#
# This repository does not adopt Python project source. This file is retained
# so pytest-based template-sync validation has explicit markers and optional
# development dependencies when maintainers choose to run it locally.

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recast-chicago-event-june-2026-template-tools"
version = "0.1.0"
description = "Local tooling metadata for retained template-sync support"
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = "MIT"
authors = [
    { name = "Frank Lesniak" },
    { name = "Danny Stutz" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "jsonschema>=4.18.0",
    "PyYAML>=6.0.3",
    "check-jsonschema==0.37.3",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
strict_markers = true
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "upstream_template_only: tests that rely on the upstream template repository's complete optional module set, protected governance files, unreplaced placeholders, or maintainer-only context",
    "downstream_template_support: tests useful for downstream template-support validation; the official downstream gate uses negative upstream_template_only selection instead",
    "slow: tests that run slower integration scenarios and may be isolated during local iteration",
]
